# lxmf

./: INTERNALS.md  LICENSE.md  README.md  straddle.yaml
browser/: package.json
browser/src/boot/: straddles.gen.ts
browser/src/components/lxmf/: AnnouncesView.vue  Composer.vue  ContactCard.vue  ContactSignal.vue  ConversationList.vue  ConversationThread.vue  MessageBubble.vue  MessageDetail.vue  PeerAvatar.vue  PeerPicker.vue  SignalBars.vue
browser/src/modules/: lxmf.ts
browser/src/panels/: AnnouncesWindow.vue  LxmfPanel.vue  MessagesWindow.vue  MessagesWindows.vue
esp-idf/: CMakeLists.txt  idf_component.yml  project_include.cmake
esp-idf/conditional/spangap-lcd/include/: lxmf_app.h
esp-idf/conditional/spangap-lcd/src/: lxmf_lcd.cpp
esp-idf/include/: lxmf.h  lxmf_stamp.h
esp-idf/lcd/src/: lxmf_lcd.cpp
esp-idf/src/: lxmf.cpp  lxmf_stamp.cpp
